MilestoneRFA_CM01/src/objects/RM_Project_Update__c.object
<CustomObject>
    <fields>
        <fullName>End_Date__c</fullName>
        <description>Travel Expense</description>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Issues_For_Escalation_Recovery_plan__c</fullName>
        <label>Issues For Escalation/Recovery plan</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Key_Events_For_Next_Week__c</fullName>
        <label>Key Events For Next Week</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>Milestone1_Project__c</referenceTo>
        <relationshipLabel>Project Update</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RM_Approval_Status__c</fullName>
        <label>Approval Status</label>
        <picklist>
            <picklistValues>
                <fullName>Initiate承認済み</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chater承認済み</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CloseOut承認済み</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RM_Key_Events_From_This_Week__c</fullName>
        <label>Key Events From This Week</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RM_Owner_Function_L2__c</fullName>
        <label>Owner Function (L2)</label>
        <picklist>
            <picklistValues>
                <fullName>Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supply Chain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Procurement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BI</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RM_Project_Lead_from_Owner_function__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Lead from Owner function</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ProjectUpdate</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RM_Project_Leader_Discussion__c</fullName>
        <label>Project Leader(Discussion)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RM_Project_No__c</fullName>
        <formula>Project__r.Projct_No_Milestone__c</formula>
        <label>Project No</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RM_Project_Status__c</fullName>
        <label>Project Status</label>
        <picklist>
            <picklistValues>
                <fullName>Green</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yellow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Red</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RM_Project_Title__c</fullName>
        <description>Project Title</description>
        <label>Project Title</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RM_Sponsor_Discussion__c</fullName>
        <label>Sponsor(Discussion)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RM_Sponsor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sponsor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Sponsor_ProjectUpdate</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RM_Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RM_Team_Member_Discussion__c</fullName>
        <label>Team Member(Discussion)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <inlineHelpText>承認状況に基づき、自動的に割り当てられます。</inlineHelpText>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Draft</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Circulation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Return to Requester</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Project Update</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
    </listViews>
    <nameField>
        <displayFormat>P-History-{0000000000}</displayFormat>
        <label>Project Update No</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>